--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,7 +7,23 @@
 
 <body>
     <main>
-        
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar(current)">
+            <div class="container-fluid">
+                <a class="navbar-brand" th:href="@{/}">Pizzeria Spring</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" th:classAppend="${current == 'pizzas'} ? active : not-active" 
+                            aria-current="page" th:href="@{/pizzas}">Pizzas</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </main>
     <div th:replace="~{fragments/header :: bootstrapScript}"></div>
 </body>
