--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -7,8 +7,27 @@
 </head>
 
 <body>
+    <header>
+         <!-- Navbar -->
+         <nav th:replace="~{fragments/navbar :: navbar('pizzas')}"></nav>
+    </header>
     <main>
         <div class="container">
+
+            <!-- Form di ricerca -->
+            <div class="my-3 d-flex justify-content-between">
+                <form th:action="@{/pizzas}" method="get">
+                    <div class="input-group">
+                        <input name="keyword" th:value="${keyword}" class="form-control" type="search" placeholder="Quale pizza cerchi?" aria-label="Quale pizza cerchi?">
+                        <button class="btn btn-primary" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                              </svg>
+                        </button>
+                    </div>
+                </form>
+            </div>
+
             <div th:if="${list.isEmpty()}">
                 <p>La lista è vuota.</p>
             </div>
