--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -16,6 +16,7 @@
 
             <!-- Form di ricerca -->
             <div class="my-3 d-flex justify-content-between">
+                <a class="btn btn-success" th:href="@{/pizzas/create}">Add Pizza</a>
                 <form th:action="@{/pizzas}" method="get">
                     <div class="input-group">
                         <input name="keyword" th:value="${keyword}" class="form-control" type="search" placeholder="Quale pizza cerchi?" aria-label="Quale pizza cerchi?">
