--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -10,7 +10,7 @@
     <header>
         <!-- Navbar -->
         <nav th:replace="~{fragments/navbar :: navbar('pizzas')}"></nav>
-   </header>
+    </header>
     <main>
         <div class="container my-3" th:object="${pizza}">
             <h1 th:text="*{name}"></h1>
@@ -31,7 +31,15 @@
                         </th:block>
                     </dl>
                 </div>
+                <!-- Ingredienti -->
+                <div class="col-4">
+                    <h3>Ingredients</h3>
+                    <ul>
+                        <li th:each="ing : *{Ingredients}" th:text="${ing.ingredient}"></li>
+                    </ul>
+                </div>
             </div>
+
             <div class="row">
                 <div class="col-12">
                     <h3>Discounts</h3>
@@ -53,22 +61,25 @@
                                     <!-- Colonna per la modifica -->
                                 </th>
                             </tr>
-                            <tbody>
-                                <tr th:each="discount : ${pizza.discounts}">
-                                    <td th:text="${discount.title}"></td>
-                                    <td th:text="|${discount.discountPercentage} %|"></td>
-                                    <td th:text="${discount.startDiscount}"></td>
-                                    <td th:text="${discount.endDiscount}"></td>
-                                    <td>
-                                        <a class="btn btn-primary" th:href="@{|/discounts/edit/${discount.id}|}">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                                                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                                              </svg>
-                                        </a>
-                                    </td>
-                                </tr>
-                            </tbody>
+                        <tbody>
+                            <tr th:each="discount : ${pizza.discounts}">
+                                <td th:text="${discount.title}"></td>
+                                <td th:text="|${discount.discountPercentage} %|"></td>
+                                <td th:text="${discount.startDiscount}"></td>
+                                <td th:text="${discount.endDiscount}"></td>
+                                <td>
+                                    <a class="btn btn-primary" th:href="@{|/discounts/edit/${discount.id}|}">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                            <path
+                                                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                            <path fill-rule="evenodd"
+                                                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                                        </svg>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
                         </thead>
                     </table>
                     <div th:unless="${pizza.discounts.size() > 0}">
