--- a/src/main/resources/templates/pizzas/edit.html
+++ b/src/main/resources/templates/pizzas/edit.html
@@ -13,17 +13,17 @@
     </header>
     <main>
         <div class="container my-3">
-            <h1>Update Pizza</h1>
+            <h1>Modifica Pizza</h1>
             <hr />
 
             <!-- form -->
             <form id=" pizza-form" th:object="${pizza}" th:action="@{|/pizzas/edit/${pizza.id}|}" method="post">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-6">
                         <div class="row">
 
                             <!-- Name -->
-                            <div class="col-12">
+                            <div class="col-12 my-2">
                                 <label class="form-label">Nome pizza</label>
                                 <input type="text" class="form-control" id="name" th:field="*{name}"
                                     th:errorClass="is-Invalid">
@@ -35,7 +35,7 @@
                             </div>
 
                             <!-- Price -->
-                            <div class="col-12">
+                            <div class="col-12 my-2">
                                 <label class="form-label">Prezzo pizza</label>
                                 <input type="text" class="form-control" id="price" th:field="*{price}"
                                     th:errorClass="is-Invalid">
@@ -47,7 +47,7 @@
                             </div>
 
                             <!-- Picture -->
-                            <div class="col-12">
+                            <div class="col-12 my-2">
                                 <label class="form-label">Foto pizza</label>
                                 <input type="text" class="form-control" id="picture" th:field="*{picture}"
                                     th:errorClass="is-Invalid">
@@ -60,7 +60,7 @@
                             </div>
 
                             <!-- Description -->
-                            <div class="col-12">
+                            <div class="col-12 my-2">
                                 <label class="form-label">Descrizione pizza</label>
                                 <textarea type="text" class="form-control" id="description" th:field="*{description}"
                                     th:errorClass="is-Invalid" rows="3"></textarea>
@@ -79,18 +79,18 @@
                             </ul>
 
                             <!-- Buttons -->
-                            <div class="col-12 my-3">
-                                <button class="btn btn-primary" type="submit">
+                            <div class="col-12 my-2">
+                                <button class="btn btn-outline-primary" type="submit">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                         class="bi bi-floppy" viewBox="0 0 16 16">
                                         <path d="M11 2H9v3h2z" />
                                         <path
                                             d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z" />
                                     </svg>
-                                    Save
+                                    Salva
                                 </button>
 
-                                <a class="btn btn-danger" th:href="@{/pizzas}">
+                                <a class="btn btn-outline-danger" th:href="@{/pizzas}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                         class="bi bi-x-square" viewBox="0 0 16 16">
                                         <path
