--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -16,12 +16,15 @@
             <h1 th:text="*{name}"></h1>
 
             <hr />
+
             <div class="row">
                 <div class="col-8">
+                    <!-- Dettaglio pizza -->
                     <dl>
                         <dt></dt>
                         <dd>
-                            <img th:src="${pizza.picture}" class="card-img-top" alt="pizza image">
+                            <img th:src="${pizza.picture}" class="card-img-top" style="height:500px; object-fit:cover;"
+                                alt="pizza image">
                         </dd>
                         <dt>Pizza</dt>
                         <dd th:text="*{name}"></dd>
@@ -32,72 +35,57 @@
                             <dd th:text="*{description}"></dd>
                         </th:block>
                     </dl>
-                </div>
-                <!-- Ingredienti -->
-                <div class="col-4">
-                    <h3>Ingredients</h3>
+
+                    <!-- Ingredienti -->
+                    <h3>Ingredienti</h3>
                     <ul>
                         <li th:each="ing : *{Ingredients}" th:text="${ing.ingredient}"></li>
                     </ul>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <h3>Discounts</h3>
-                    <div class="mb-2">
+                    <!-- shortcut bottoni per modificare ed eliminare la pizza -->
+                    <div class="d-flex">
+                        <a class="btn btn-outline-primary mx-1" th:href="@{|/pizzas/edit/${pizza.id}|}"> Modifica Pizza </a>
+                        <form action="#" th:action="@{'/pizzas/delete/{id}'(id=${pizza.id})}" method="post" onclick="return confirm('Are you sure?')">
+                            <button class="btn btn-outline-danger mx-1" type="submit" id="submitButton"> Elimina Pizza </button>
+                        </form>
+                    </div>
+                </div>
+
+                <!-- Offerte speciali -->
+                <div class="col-4">
+                    <h3>Offerte speciali</h3>
+                    <!-- Bottoni -->
+                    <div class="mb-2 my-3">
                         <!-- Creazione di una nuova offerta -->
                         <a class="btn btn-success" th:href="@{|/pizzas/${pizza.id}/discounts|}">
                             <!-- @{'/pizzas/{id}/discounts'(id=${pizza.id})} -->
                             Aggiungi offerta speciale
                         </a>
                     </div>
-                    <table class="table table-striped" th:if="${pizza.discounts.size() > 0}">
-                        <thead>
-                            <tr>
-                                <th>Titolo</th>
-                                <th>Valore offerta</th>
-                                <th>Inizio offerta</th>
-                                <th>Fine offerta</th>
-                                <th>
-                                    <!-- Colonna per la modifica -->
-                                </th>
-                                <th>
-                                    <!-- Colonna per l'eliminazione -->
-                                </th>
-                            </tr>
-                        <tbody>
-                            <tr th:each="discount : ${pizza.discounts}">
-                                <td th:text="${discount.title}"></td>
-                                <td th:text="|${discount.discountPercentage} %|"></td>
-                                <td th:text="${discount.startDiscount}"></td>
-                                <td th:text="${discount.endDiscount}"></td>
-                                <td>
-                                    <a class="btn btn-primary" th:href="@{|/discounts/edit/${discount.id}|}">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                            <path
-                                                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                                            <path fill-rule="evenodd"
-                                                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
-                                        </svg>
-                                    </a>
-                                </td>
-                                <td>
-                                    <form action="#" th:action="@{'/discounts/delete/{id}'(id=${discount.id})}" method="post" onclick="return confirm('Are you sure?')">
-                                        <button class="btn btn-danger" type="submit" id="submitButton">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-                                                <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
-                                            </svg>
-                                        </button>
-                                    </form>
-                                </td>
-                            </tr>
-                        </tbody>
-                        </thead>
-                    </table>
+                    <!-- card -->
+                    <div class="card my-3" style="width: 18rem;" th:if="${pizza.discounts.size() > 0}"
+                        th:each="discount : ${pizza.discounts}">
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${discount.title}"></h5>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item" th:text="|Valore offerta: ${discount.discountPercentage}%|">
+                            </li>
+                            <li class="list-group-item" th:text="|Inizio offerta: ${discount.startDiscount}|"></li>
+                            <li class="list-group-item" th:text="|Termine offerta: ${discount.endDiscount}|"></li>
+                        </ul>
+                        <div class="card-body d-flex justify-content-evenly">
+                            <a class="btn btn-outline-primary" th:href="@{|/discounts/edit/${discount.id}|}"> Modifica
+                            </a>
+                            <form action="#" th:action="@{'/discounts/delete/{id}'(id=${discount.id})}" method="post"
+                                onclick="return confirm('Are you sure?')">
+                                <button class="btn btn-outline-danger" type="submit" id="submitButton"> Elimina
+                                </button>
+                            </form>
+                        </div>
+                    </div>
                     <div th:unless="${pizza.discounts.size() > 0}">
-                        <div class="alert alert-primary">
+                        <div class="alert alert-primary mt-3">
                             Non ci sono offerte speciali per questa pizza.
                         </div>
                     </div>
